# Cpp-High-Frequency-Trading-System-HFT

./: .clang-tidy  CMakeLists.txt  README.md  clang_tidy_report.txt  cppcheck_report.txt
documentation/: documentation.md
plot/: plot.md
src/: Api.cpp  Api.hpp  Socket.hpp  Trader.cpp  Trader.hpp  main.cpp  utility.hpp
src/Boost_WebSocket/: BSocket.cpp  BSocket.hpp
src/Custom_WebSocket/: CParser.cpp  CParser.hpp  CSocket.cpp  CSocket.hpp
src/WebSocketpp/: Socketpp.cpp  Socketpp.hpp
src/interfaces/: IMarketDataSource.hpp  IOrderManager.hpp  IRiskManager.hpp  IStrategy.hpp
src/market_data/: MockMarketDataSource.cpp  MockMarketDataSource.hpp
src/oms/: OrderManager.cpp  OrderManager.hpp  OrderTypes.hpp
src/risk_management/: RiskManager.cpp  RiskManager.hpp  RiskRules.hpp
src/strategies/: MeanReversionStrategy.cpp  MeanReversionStrategy.hpp  MomentumStrategy.cpp  MomentumStrategy.hpp
